--- a/android/local.properties
+++ b/android/local.properties
@@ -5,5 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Aug 29 09:22:05 NOVT 2019
-ndk.dir=/Users/whalemare/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/whalemare/Library/Android/sdk
+#ndk.dir=/Users/whalemare/Library/Android/sdk/ndk-bundle
+#sdk.dir=/Users/whalemare/Library/Android/sdk
+sdk.dir=C\:\\Users\\79272\\AppData\\Local\\Android\\Sdk
