--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,6 @@ buildscript {
         return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties['ReactNativeYandexPayment_' + name]
     }
 
-    ext.kotlin_version = '1.3.50'
     repositories {
         jcenter()
         maven {
@@ -20,7 +19,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${getExtOrDefault('kotlinVersion')}")
     }
 }
 
@@ -52,6 +51,8 @@ android {
     }
 }
 
+def kotlin_version = getExtOrDefault('kotlinVersion')
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.aar"])
 //    implementation(name:'ThreatMetrix-Android-SDK-5.4-73', ext:'aar')
@@ -60,7 +61,7 @@ dependencies {
 //  as my project doesn't require yoomoney paymend method (oly card), this lib apparently isn't necessary
 //    implementation "ru.yoo.sdk.auth:auth:1.0.51"
     implementation 'com.facebook.react:react-native:+'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
